code/hello_bad.py.output

  File "./hello_bad.py", line 7
    print('Hello, world!)
                        ^
SyntaxError: EOL while scanning string literal
